--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -3,7 +3,7 @@ name: Freee to Slack Status Sync
 on:
   schedule:
     - cron: '0 1 * * 1-5'   # JST 10:00
-    - cron: '0 10 * * 1-5'  # JST 19:00
+    # - cron: '0 10 * * 1-5'  # JST 19:00
   workflow_dispatch:
 
 jobs:
